Am modificat prima versiune a site-ului
Am modificat prima versiune a site-ului

--- a/despre.html
+++ b/despre.html
@@ -24,7 +24,8 @@
 
 
 <body>
-  <header class="navbar navbar-expand-lg nav-design sticky-top">
+
+  <div class="navbar navbar-expand-lg nav-design sticky-top">
     <nav class="container-fluid">
       <h1 class="navbar-design">
         <a class="navbar-link" href="index.html">
@@ -52,17 +53,42 @@
         </div>
       </div>
     </nav>
-  </header>
-
-
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <img src="Imagini/servicii.jpg" class="img-fluid"
-          alt="o sală cu mese din lemn, scaune negre de metal, pereți albi și o instalație luminoasă cu becuri care atârnă de tavan">
-      </div>
-    </div>
   </div>
+
+  <header>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="Imagini/servicii.jpg" class="d-block w-100"
+            alt="o sală cu mese din lemn, scaune negre de metal, pereți albi și o instalație luminoasă cu becuri care atârnă de tavan">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagini/camera.jpg" class="d-block w-100"
+            alt="un dormitor modern cu un pat matrimonial cu lenjerie albă, două noptiere cu veioze și un tablou cu păsări pe perete">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagini/camera-lux-2-full.jpg" class="d-block w-100"
+            alt="un dormitor cu tapet roșu deschis, parchet de lemn maro deschis, un candelabru agățat de tavan, două uși de lemn, un pat și două dulapuri de lemn și o oglindă">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagini/view.jpg" class="d-block w-100"
+            alt="un lac înconjurat de păduri de brazi la poalele unor munți stâncoși și un mic doc de lem pentru bărci">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagini/pensiunea_caprioara.jpg" class="d-block w-100"
+            alt="o pensiune albă cu 2 etaje și acoperiș roșu, înconjurată de brazi cu vedere la un lac">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </header>
 
   <div class="container mt-5">
     <div class="row">
@@ -500,67 +526,6 @@
               </ul>
               </p>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-green">
-    <div class="row">
-      <div class="col-12">
-        <h2 class="h2-white">Noutăți</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6 col-md-12">
-        <div class="row">
-          <div class="col-12">
-            <h3 class="h3-white">Miau! Service</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <img src="Imagini/room service.jpg" class="img-medium-full" alt="o tavă cu ceai și biscuiți, alături de o pisică portocalie pe un pat cu lenjerie albă">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <p></p>
-            <p class="p-white">
-              Experimentați serviciul nostru de room service unic, unde oaspeții
-              noștri nu primesc doar comanda dorită, ci și un strop de afecțiune
-              din partea companionilor noștri pufoși. La Pensiunea Căprioara încercăm
-              să vă oferim o experiență reconfortantă și relaxantă chiar și în momentele
-              de melancolie, atunci când doriți doar să rămâneți în camera dumneavoastră.
-              Pisicuțele noastre specializate în detensionare și reechilibrare emoțională
-              abia așteaptă să vă aducă zâmbetul înapoi.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-6 col-md-12">
-        <div class="row">
-          <div class="col-12">
-            <h3 class="h3-white">Pets Wellness Center</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <img src="Imagini/doggo.jpg" class="img-medium-full" alt="un câine portocaliu cu un prosop roz pe cap, mângâiat de o mână care ține un perie">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <p></p>
-            <p class="p-white">
-              Știm că modul în care tratăm animăluțele spune multe despre personalitatea noastră.
-              Astfel, la Pensiunea Căprioara, fiecare prieten cu blană sau pene este binevenit să
-              descopere bucuria echilibrului și a îngrijirii de sine. Echipa noastră de terapeuți
-              animali experimentați și dedicați vă așteaptă pentru a vă ghida animăluțele printr-o
-              varietate de tratamente și activități menite să promoveze starea lor de bine.
-            </p>
           </div>
         </div>
       </div>
