--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,8 @@
 
 
 <body>
-  <header class="navbar navbar-expand-lg nav-design sticky-top">
+
+  <div class="navbar navbar-expand-lg nav-design sticky-top">
     <nav class="container-fluid">
       <h1 class="navbar-design">
         <a class="navbar-link" href="index.html">
@@ -52,17 +53,42 @@
         </div>
       </div>
     </nav>
-  </header>
-
-
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <img src="Imagini/view.jpg" class="img-fluid" 
-        alt="un lac înconjurat de păduri de brazi la poalele unor munți stâncoși și un mic doc de lem pentru bărci">
-      </div>
-    </div>
   </div>
+
+  <header>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="Imagini/view.jpg" class="d-block w-100"
+            alt="un lac înconjurat de păduri de brazi la poalele unor munți stâncoși și un mic doc de lem pentru bărci">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagini/pensiunea_caprioara.jpg" class="d-block w-100"
+            alt="o pensiune albă cu 2 etaje și acoperiș roșu, înconjurată de brazi cu vedere la un lac">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagini/servicii.jpg" class="d-block w-100"
+          alt="o sală cu mese din lemn, scaune negre de metal, pereți albi și o instalație luminoasă cu becuri care atârnă de tavan">
+      </div>
+      <div class="carousel-item">
+        <img src="Imagini/camera.jpg" class="d-block w-100"
+          alt="un dormitor modern cu un pat matrimonial cu lenjerie albă, două noptiere cu veioze și un tablou cu păsări pe perete">
+      </div>
+      <div class="carousel-item">
+          <img src="Imagini/camera-lux-2-full.jpg" class="d-block w-100"
+          alt="un dormitor cu tapet roșu deschis, parchet de lemn maro deschis, un candelabru agățat de tavan, două uși de lemn, un pat și două dulapuri de lemn și o oglindă">
+      </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </header>
 
   <div class="container-green">
     <div class="row">
